# jetson_zed

./: CMakeLists.txt
segnet-zed/: CMakeLists.txt  segnet-zed.cpp
